Designed layout and loaded card

--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer class="footer">
+    <a href="https://www.freepik.com/free-vector/chinese-zodiac-animals-red-set-rabbit-dog-monkey-pig-tiger-horse-dragon-goat-snake-rooster-ox-rat-isolated-cartoon_15405982.htm#query=the%20Chinese%20Zodiac%E2%80%8B%E2%80%8B&position=4&from_view=search&track=ais">Image by macrovector</a> on Freepik
+  </footer>
 </html>
